# cli-assert

./: Cargo.toml  README.md  Taskfile.yml
src/: command.rs  files.rs  lib.rs  macros.rs  utils.rs
tests/: test_test.rs  test_utils.rs
